Adds test for utils/token generate/verify
Signed-off-by: Jai <jai@applait.com>

--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,7 @@ import:
   - json
 - package: github.com/spf13/viper
   version: ^1.0.0
+- package: github.com/google/go-cmp
+  version: ^0.1.0
+  subpackages:
+  - cmp
