Updates circleci config to run tests
Signed-off-by: Jai <jai@applait.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,3 +33,7 @@ jobs:
       - run:
           name: Build project
           command: go build .
+
+      - run:
+          name: Run tests
+          command: go test -v ./...
