--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
 
       - run:
           name: Build project
-          command: go build .
+          command: chmod 744 build.sh && bash build.sh dev
 
       - run:
           name: Run tests
