--- a/glide.yaml
+++ b/glide.yaml
@@ -12,3 +12,7 @@ import:
   version: ^0.1.0
   subpackages:
   - cmp
+- package: github.com/go-pg/migrations
+  version: ~6.1.0
+- package: github.com/go-pg/pg
+  version: ~6.6.15
