--- a/glide.yaml
+++ b/glide.yaml
@@ -14,6 +14,9 @@ import:
   version: ~1.1.0
   subpackages:
   - spew
+- package: golang.org/x/crypto
+  subpackages:
+  - bcrypt
 testImport:
 - package: github.com/google/go-cmp
   version: ~0.1.0
